fixed a bug with the submenu
the submenu was too far away from or inside the main menu at certain viewport widths

--- a/theme/css/style.css
+++ b/theme/css/style.css
@@ -96,7 +96,7 @@ header .region-navigation {
 }
 
 #superfish-main li ul {
-    margin-top: 1vw;
+    margin-top: calc(2.72vw - 21px);
 }
 
 #main {
